--- a/index.html
+++ b/index.html
@@ -8,7 +8,106 @@
     <title>Call Listening</title>
 </head>
 <body>
+    <header></header>
+    <section class="title call-details">
+        <h2>Call Details</h2>
+        <p class="question">Reviewer Name</p>
+        <div class="answer-section">
 
+        </div>
+        <p class="question">Agent Name</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Agent Extension</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Department</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Time of Call</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Date of Call</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Inbound / Outbound</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Customer Phone Number</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Business Name</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">CRM Link</p>
+        <div class="answer-section">
+
+        </div>
+    </section>
+    <section class="title scripts">
+        <h2>Scripts</h2>
+        <p class="question">Did the agent use the appropriate opening script?</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Did the agent use the appropriate closing script?</p>
+        <div class="answer-section">
+
+        </div>
+    </section>
+    <section class="title soft-skills">
+        <h2>Soft Skills</h2>
+        <p class="question">How well did the agent show active listening skills?</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">How was the agent's rapport building with the customer?</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Was the agent's tone appropriate to the situation?</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">How well did teh agent summarize the issue and further actions to be taken?</p>
+        <div class="answer-section">
+
+        </div>
+    </section>
+    <section class="title processes">
+        <h2>Processes</h2>
+        <p class="question">Was a clear note left on the CRM?</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Did the agent follow up on the issue correctly?</p>
+        <div class="answer-section">
+
+        </div>
+    </section>
+    <section class="title compliance">
+        <h2>Compliance</h2>
+        <p class="question">Did the agent attempt to identify who they were speaking to?</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Did the agent identify what level of access the caller should have?</p>
+        <div class="answer-section">
+
+        </div>
+        <p class="question">Did the agent identify a potentially vulnerable customer?</p>
+        <div class="answer-section">
+
+        </div>
+    </section>
     <script src="/theme/theme.js"></script>
 </body>
 </html>
