--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
 
         </div>
     </section>
+    <section class="title notes">
+        <h2>Notes</h2>
+        <p class="question">Additional Notes</p>
+        <div class="answer-section">
+
+        </div>
+    </section>
     <script src="/theme/theme.js"></script>
 </body>
 </html>
