--- a/index.html
+++ b/index.html
@@ -5,134 +5,268 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet/less" type="text/css" href="styles.css" />
+    <script src="less.js" type="text/javascript"></script>
+    <link type="text/javascript" href="functions.js" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Call Listening</title>
 </head>
 <body>
     <header>
-        <h1>Call Listening Sheet</h1>
+        <div class="container">
+            <h1>Call Listening Sheet</h1>
+        </div>
     </header>
     <section class="title call-details">
-        <h2>Call Details</h2>
-        <p class="question">Reviewer Name</p>
-        <div class="answer-section">
-            <input type="text" name="reviewerName" /><label for="reviewerName">Reviewer Name</label>
-        </div>
-        <p class="question">Agent Name</p>
-        <div class="answer-section">
-            <input type="text" name="agentName" /><label for="agentName">Agent Name</label>
-        </div>
-        <p class="question">Agent Extension</p>
-        <div class="answer-section">
-            <select name="agentExtension" id="agentExtension">
-                <option value="101">101</option>
-                <option value="102">102</option>
-                <option value="103">103</option>
-                <option value="104">104</option>
-                <option value="105">105</option>
-                <option value="106">106</option>
-                <option value="107">107</option>
-                <option value="108">108</option>
-                <option value="109">109</option>
-                <option value="112">112</option>
-                <option value="113">113</option>
-                <option value="114">114</option>
-                <option value="116">116</option>
-                <option value="117">117</option>
-            </select>
-        </div>
-        <p class="question">Department</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Time of Call</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Date of Call</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Inbound / Outbound</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Customer Phone Number</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Business Name</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">CRM Link</p>
-        <div class="answer-section">
-
+        <div class="container">
+            <h2>Call Details</h2>
+            <label for="reviewerName" class="question">Reviewer Name</label>
+            <div class="answer-section">
+                <input type="text" name="reviewerName" />
+            </div>
+            <label for="agentName" class="question">Agent Name</label>
+            <div class="answer-section">
+                <input type="text" name="agentName" />
+            </div>
+            <label for="agentExtension" class="question">Agent Extension</label>
+            <div class="answer-section">
+                <select name="agentExtension" id="agentExtension">
+                    <option value="101">101</option>
+                    <option value="102">102</option>
+                    <option value="103">103</option>
+                    <option value="104">104</option>
+                    <option value="105">105</option>
+                    <option value="106">106</option>
+                    <option value="107">107</option>
+                    <option value="108">108</option>
+                    <option value="109">109</option>
+                    <option value="112">112</option>
+                    <option value="113">113</option>
+                    <option value="114">114</option>
+                    <option value="116">116</option>
+                    <option value="117">117</option>
+                </select>
+            </div>
+            <label for="department" class="question">Department</label>
+            <div class="answer-section">
+                <select name="department" id="department">
+                    <option value="1st Line Support">1st Line Support</option>
+                    <option value="2nd Line Support">2nd Line Support</option>
+                </select>
+            </div>
+            <label for="timeOfCall" class="question">Time of Call</label>
+            <div class="answer-section">
+                <input type="time" name="timeOfCall" />
+            </div>
+            <label for="dateOfCall" class="question">Date of Call</label>
+            <div class="answer-section">
+                <input type="date" name="dateOfCall" />
+            </div>
+            <label for="callType" class="question">Inbound / Outbound</label>
+            <div class="answer-section">
+                <select name="callType" id="callType">
+                    <option value="inbound">Inbound</option>
+                    <option value="outbound">Outbound</option>
+                </select>
+            </div>
+            <label for="customerPhone" class="question">Customer Phone Number</label>
+            <div class="answer-section">
+                <input type="number" name="customerPhone" />
+            </div>
+            <label for="businessName" class="question">Business Name</label>
+            <div class="answer-section">
+                <input type="text" name="businessName" />
+            </div>
+            <label for="crmLink" class="question">CRM Link</label>
+            <div class="answer-section">
+                <input type="text" name="crmLink" />
+            </div>
         </div>
     </section>
     <section class="title scripts">
-        <h2>Scripts</h2>
-        <p class="question">Did the agent use the appropriate opening script?</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Did the agent use the appropriate closing script?</p>
-        <div class="answer-section">
-
+        <div class="container">
+            <h2>Scripts</h2>
+            <p class="question">Did the agent use the appropriate opening script?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+            </div>
+            <p class="question">Did the agent use the appropriate closing script?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+            </div>
         </div>
     </section>
     <section class="title soft-skills">
-        <h2>Soft Skills</h2>
-        <p class="question">How well did the agent show active listening skills?</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">How was the agent's rapport building with the customer?</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Was the agent's tone appropriate to the situation?</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">How well did teh agent summarize the issue and further actions to be taken?</p>
-        <div class="answer-section">
-
+        <div class="container">
+            <h2>Soft Skills</h2>
+            <p class="question">How well did the agent show active listening skills?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+                <input type="radio" name="score" value="6"><label for="6">6</label>
+                <input type="radio" name="score" value="7"><label for="7">7</label>
+                <input type="radio" name="score" value="8"><label for="8">8</label>
+                <input type="radio" name="score" value="9"><label for="9">9</label>
+                <input type="radio" name="score" value="10"><label for="10">10</label>
+            </div>
+            <p class="question">How was the agent's rapport building with the customer?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+                <input type="radio" name="score" value="6"><label for="6">6</label>
+                <input type="radio" name="score" value="7"><label for="7">7</label>
+                <input type="radio" name="score" value="8"><label for="8">8</label>
+                <input type="radio" name="score" value="9"><label for="9">9</label>
+                <input type="radio" name="score" value="10"><label for="10">10</label>
+            </div>
+            <p class="question">Was the agent's tone appropriate to the situation?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+                <input type="radio" name="score" value="6"><label for="6">6</label>
+                <input type="radio" name="score" value="7"><label for="7">7</label>
+                <input type="radio" name="score" value="8"><label for="8">8</label>
+                <input type="radio" name="score" value="9"><label for="9">9</label>
+                <input type="radio" name="score" value="10"><label for="10">10</label>
+            </div>
+            <p class="question">How well did teh agent summarize the issue and further actions to be taken?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+                <input type="radio" name="score" value="6"><label for="6">6</label>
+                <input type="radio" name="score" value="7"><label for="7">7</label>
+                <input type="radio" name="score" value="8"><label for="8">8</label>
+                <input type="radio" name="score" value="9"><label for="9">9</label>
+                <input type="radio" name="score" value="10"><label for="10">10</label>
+            </div>
         </div>
     </section>
     <section class="title processes">
-        <h2>Processes</h2>
-        <p class="question">Was a clear note left on the CRM?</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Did the agent follow up on the issue correctly?</p>
-        <div class="answer-section">
-
+        <div class="container">
+            <h2>Processes</h2>
+            <p class="question">Was a clear note left on the CRM?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+            </div>
+            <p class="question">Did the agent follow up on the issue correctly?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+                <input type="radio" name="score" value="6"><label for="6">6</label>
+                <input type="radio" name="score" value="7"><label for="7">7</label>
+                <input type="radio" name="score" value="8"><label for="8">8</label>
+                <input type="radio" name="score" value="9"><label for="9">9</label>
+                <input type="radio" name="score" value="10"><label for="10">10</label>
+            </div>
         </div>
     </section>
     <section class="title compliance">
-        <h2>Compliance</h2>
-        <p class="question">Did the agent attempt to identify who they were speaking to?</p>
-        <div class="answer-section">
-
+        <div class="container">
+            <h2>Compliance</h2>
+            <p class="question">Did the agent attempt to identify who they were speaking to?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+            </div>
+            <p class="question">Did the agent identify what level of access the caller should have?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+            </div>
+            <p class="question">Did the agent identify a potentially vulnerable customer?</p>
+            <div class="answer-section">
+                <input type="radio" name="score" value="1"><label for="1">1</label>
+                <input type="radio" name="score" value="2"><label for="2">2</label>
+                <input type="radio" name="score" value="3"><label for="3">3</label>
+                <input type="radio" name="score" value="4"><label for="4">4</label>
+                <input type="radio" name="score" value="5"><label for="5">5</label>
+            </div>
         </div>
-        <p class="question">Did the agent identify what level of access the caller should have?</p>
-        <div class="answer-section">
-
-        </div>
-        <p class="question">Did the agent identify a potentially vulnerable customer?</p>
-        <div class="answer-section">
-
+    </section>
+    <section class="overall">
+        <div class="container">
+            <h2>Overall Score</h2>
+            <div class="subtotal">
+                <h3>Details</h3>
+                <div class="subtotal__details">
+                    <b>Reviewer Name: </b><p id="reviewerNameOutput"></p>
+                    <b>Agent Name: </b><p id="agentNameOutput"></p>
+                    <b>Agent Extension: </b><p id="agentExtensionOutput"></p>
+                    <b>Department: </b><p id="departmentOutput"></p>
+                    <b>Time of Call: </b><p id="timeOutput"></p>
+                    <b>Date of Call: </b><p id="dateOutput"></p>
+                    <b>Inbound / Outbound: </b><p id="typeOutput"></p>
+                    <b>Client CLI: </b><p id="numberOutput"></p>
+                    <b>Business Name: </b><p id="businessNameOutput"></p>
+                    <b>CRM Link: </b><p id="crmLinkOutput"></p>
+                </div>
+            </div>
+            <div class="subtotals">
+                <h3>Scripts</h3>
+                <p class="subtotal__scripts"></p>
+            </div>
+            <div class="subtotal">
+                <h3>Soft Skills</h3>
+                <p class="subtotal__soft-skills"></p>
+            </div>
+            <div class="subtotal">
+                <h3>Processes</h3>
+                <p class="subtotal__processes"></p>
+            </div>
+            <div class="subtotal">
+                <h3>Compliance</h3>
+                <p class="subtotal__compliance"></p>
+            </div>
         </div>
     </section>
     <section class="title notes">
-        <h2>Notes</h2>
-        <p class="question">Additional Notes</p>
-        <div class="answer-section">
-
+        <div class="container">
+            <h2>Notes</h2>
+            <label for="notes" class="question">Additional Notes</label>
+            <div class="answer-section">
+                <input type="text" name="notes" />
+            </div>
         </div>
     </section>
+    <script>
+        less = {
+            async: true
+        }
+    </script>
     <script src="/theme/theme.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/less"></script>
 </body>
 </html>
